add basic template binding

--- a/frontend/views/map-component.html
+++ b/frontend/views/map-component.html
@@ -1,5 +1,10 @@
 <h1>{{ title }}</h1>
 
-<sebm-google-map [latitude]="lat" [longitude]="lng">
-    <sebm-google-map-marker [latitude]="lat" [longitude]="lng"></sebm-google-map-marker>
+
+
+<sebm-google-map [latitude]="lat" [longitude]="lng" [zoom]="zoom" [disableDoubleClickZoom]="disableDoubleClickZoom"
+                 [scrollwheel]="scrollwheel" [zoomControl]="zoomControl"
+                 (mapClick)="showAddJobDialog($event)">
+    <sebm-google-map-marker [latitude]="lat" [longitude]="lng" title="Test title"></sebm-google-map-marker>
 </sebm-google-map>
+
