--- a/frontend/views/app-component.html
+++ b/frontend/views/app-component.html
@@ -16,20 +16,13 @@
         <div class="collapse navbar-collapse" id="bs-navbar1">
             <ul class="nav navbar-nav">
                 <li>
-                    <a routerLink="/post-a-job">Post a Job</a>
+                    <a routerLink="/post">Post</a>
                 </li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                       aria-expanded="false">Dropdown <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Action</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something else here</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#">Separated link</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#">One more separated link</a></li>
-                    </ul>
+                <li>
+                    <a routerLink="/find">Find</a>
+                </li>
+                <li>
+                    <a routerLink="/applied">Applied</a>
                 </li>
             </ul>
             <form class="navbar-form navbar-left">
@@ -39,7 +32,6 @@
                 <button type="submit" class="btn btn-default">Submit</button>
             </form>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">Link</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                        aria-expanded="false">Dropdown <span class="caret"></span></a>
