fixing link label

--- a/backend/views/index.ejs
+++ b/backend/views/index.ejs
@@ -10,7 +10,7 @@
     <nav>
     <ul>
         <li><a href="/jobs">API Listing of jobs</a></li>
-        <li><a href="/frontend">Map</a></li>
+        <li><a href="/frontend">Frontend</a></li>
     </ul>
     </nav>
     <% if ( !loggedIn  ) { %>
