--- a/backend/public/frontend/views/post-component.html
+++ b/backend/public/frontend/views/post-component.html
@@ -95,9 +95,13 @@
                     <div class="form-group">
                         <label>Location</label>
 
-                        <sebm-google-map [latitude]="theMarker.lat" [longitude]="theMarker.lng">
+                        <sebm-google-map
+                                [latitude]="theMarker.lat"
+                                [longitude]="theMarker.lng"
+                                [zoom]="zoom">
 
-                            <sebm-google-map-marker [latitude]="theMarker.lat" [longitude]="theMarker.lng"
+                            <sebm-google-map-marker [latitude]="theMarker.lat"
+                                                    [longitude]="theMarker.lng"
                                                     [markerDraggable]="theMarker.draggable"
                                                     (dragEnd)="markerDragEnd($event)">
                             </sebm-google-map-marker>
@@ -116,6 +120,6 @@
 
     <button type="submit" class="btn btn-default">Submit</button>
 
-    <button type="button" class="btn btn-default" (click)="onTest()" > Test</button>
+    <button type="button" class="btn btn-default" (click)="onTest()"> Test</button>
 
 </form>
