fine tune post job

--- a/backend/public/frontend/views/post-component.html
+++ b/backend/public/frontend/views/post-component.html
@@ -120,7 +120,7 @@
                 <div class="col-md-12">
 
                     <div class="form-group">
-                        <label>Location</label>
+                        <label>Location (Drag pointer to set location)</label>
 
                         <sebm-google-map
                                 [latitude]="theMarker.lat"
