--- a/backend/public/frontend/views/post-component.html
+++ b/backend/public/frontend/views/post-component.html
@@ -1,4 +1,4 @@
-<h1>Post a Job</h1>
+<h1>Post a Job</h1><span style="color: red">{{message}}</span>
 
 <form (ngSubmit)="onSubmit()" novalidate *ngIf="active" #postForm="ngForm" id="postForm" >
 
