--- a/backend/public/frontend/views/app-component.html
+++ b/backend/public/frontend/views/app-component.html
@@ -22,7 +22,7 @@
                     <a routerLink="/find">Find</a>
                 </li>
                 <li>
-                    <a routerLink="/applied">Applied</a>
+                    <a routerLink="/applied">My Jobs</a>
                 </li>
             </ul>
             <form class="navbar-form navbar-left">
