--- a/backend/public/frontend/views/app-component.html
+++ b/backend/public/frontend/views/app-component.html
@@ -31,11 +31,15 @@
                 </div>
                 <button type="submit" class="btn btn-default">Submit</button>
             </form>
+
             <ul class="nav navbar-nav navbar-right">
-                <li>
+                <li *ngIf="currentUser == null">
                     <a routerLink="/login">Login</a>
                 </li>
-                <li>
+                <li *ngIf="currentUser != null">
+                    <a>Hello {{currentUser}}</a>
+                </li>
+                <li *ngIf="currentUser != null">
                     <a routerLink="/logout">Logout</a>
                 </li>
             </ul>
