adding logout functionality

--- a/backend/views/index.ejs
+++ b/backend/views/index.ejs
@@ -23,7 +23,7 @@
       </form>
     </div>
     <% }  else { %>
-    <li><a href="/users/logout">Logout</a></li>
+    <li><a href="/users/logout">Logout <%= loggedIn %></a></li>
 
     <% } %>
 
