--- a/backend/views/index.ejs
+++ b/backend/views/index.ejs
@@ -6,26 +6,13 @@
   </head>
   <body>
     <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <p><%= title %></p>
     <nav>
     <ul>
         <li><a href="/jobs">API Listing of jobs</a></li>
         <li><a href="/frontend">Frontend</a></li>
     </ul>
     </nav>
-    <% if ( !loggedIn  ) { %>
-    <div class="login">
-      <h1>Login</h1>
-      <form method="post" action="/users/login">
-        <p><input type="text" name="username" value="" placeholder="Username or Email"></p>
-        <p><input type="password" name="password" value="" placeholder="Password"></p>
-        <p class="submit"><input type="submit" name="commit" value="Login"></p>
-      </form>
-    </div>
-    <% }  else { %>
-    <li><a href="/users/logout">Logout</a></li>
-
-    <% } %>
 
   </body>
 </html>
